use Path for getRemovedFiles
GitOrigin-RevId: c98d661f274c298eabac024e9a37b96b863c1506